Working on the team detail roster tab

--- a/SpectatorFootball/WindowsLeague/Team_DetailUX.xaml
+++ b/SpectatorFootball/WindowsLeague/Team_DetailUX.xaml
@@ -9,6 +9,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
+        <local1:iPosConverter x:Key="iPosConverter" />
+        <local1:DoubleFormatConverter x:Key="DoubleFormatConverter" />
         <local1:ColorConverter x:Key="ColorConverter" />
         <local1:StockHelmetConverter x:Key="StockHelmetConverter" />
         <local1:ImageConverter x:Key="ImageConverter" />
@@ -821,7 +823,7 @@
                 </TabItem>
                 <TabItem Header="Roster" Name="tabRoster">
                     <StackPanel Orientation="Vertical"  Width="1000" Height="700">
-                        <ListView Name="detRoster" Style="{StaticResource SmallAltListViewStyle}" HorizontalContentAlignment="Center"  AlternationCount="2" Width="940" Height="400">
+                        <ListView Name="detRoster" Style="{StaticResource SmallAltListViewStyle}" HorizontalContentAlignment="Center"  AlternationCount="2" Width="940" Height="650">
 
                             <ListView.Resources>
                                 <Style TargetType="{x:Type GridViewColumnHeader}">
@@ -843,16 +845,11 @@
                             </ListView.Resources>
                             <ListView.View>
                                 <GridView>
-                                    <GridViewColumn Header="Num" Width="40" DisplayMemberBinding="{Binding Jersey_Number}" />
-                                    <GridViewColumn Header="Name"  Width="200">
-                                        <GridViewColumn.HeaderContainerStyle>
-                                            <Style TargetType="{x:Type GridViewColumnHeader}">
-                                                <Setter Property="HorizontalContentAlignment" Value="Left" />
-                                            </Style>
-                                        </GridViewColumn.HeaderContainerStyle>
+                                    <GridViewColumn Header="Num" Width="40" DisplayMemberBinding="{Binding Player.Jersey_Number}" />
+                                    <GridViewColumn Header="Name">
                                         <GridViewColumn.CellTemplate>
                                             <DataTemplate>
-                                                <TextBlock TextAlignment="Left">
+                                                <TextBlock Width="160">
                                         <Run Text="{Binding Player.First_Name}" />
                                         <Run Text=" " /> <!-- space -->
                                         <Run Text="{Binding Player.Last_Name}" />
@@ -860,23 +857,31 @@
                                             </DataTemplate>
                                         </GridViewColumn.CellTemplate>
                                     </GridViewColumn>
-                                    <GridViewColumn Header="Age" Width="40" DisplayMemberBinding="{Binding Age}"  />
-                                    <GridViewColumn Header="Pos" Width="40" DisplayMemberBinding="{Binding Pos}" />
+                                    <GridViewColumn Header="Age" Width="40" DisplayMemberBinding="{Binding Player.Age}"  />
+                                    <GridViewColumn Header="POS">
+                                        <GridViewColumn.CellTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Width="30" TextAlignment="Center">
+                                                    <Run Text="{Binding Player.Pos, Converter={StaticResource iPosConverter}}" />
+                                                </TextBlock>
+                                            </DataTemplate>
+                                        </GridViewColumn.CellTemplate>
+                                    </GridViewColumn>
                                     <GridViewColumn Header="All" Width="50" DisplayMemberBinding="{Binding Ratings.OverAll, StringFormat='{}{0:#0.00}' }"  />
-                                    <GridViewColumn Header="Acc" Width="30" DisplayMemberBinding="{Binding Ratings.Accuracy_Rating}" />
-                                    <GridViewColumn Header="Dsc" Width="30" DisplayMemberBinding="{Binding Ratings.Decision_Making}" />
-                                    <GridViewColumn Header="Arm" Width="40" DisplayMemberBinding="{Binding Ratings.Arm_Strength_Rating}" />
-                                    <GridViewColumn Header="PBlk" Width="40" DisplayMemberBinding="{Binding Ratings.Pass_Block_Rating}" />
-                                    <GridViewColumn Header="RBlk" Width="40" DisplayMemberBinding="{Binding Ratings.Run_Block_Rating}" />
-                                    <GridViewColumn Header="RPwr" Width="40" DisplayMemberBinding="{Binding Ratings.Running_Power_Rating}" />
-                                    <GridViewColumn Header="Spd" Width="40" DisplayMemberBinding="{Binding Ratings.Speed_Rating}" />
-                                    <GridViewColumn Header="Agil" Width="40" DisplayMemberBinding="{Binding Ratings.Agilty_Rating}" />
-                                    <GridViewColumn Header="Hnd" Width="40" DisplayMemberBinding="{Binding Ratings.Hands_Rating}" />
-                                    <GridViewColumn Header="Patt" Width="40" DisplayMemberBinding="{Binding Ratings.Pass_Attack}" />
-                                    <GridViewColumn Header="RAtt" Width="40" DisplayMemberBinding="{Binding Ratings.Run_Attack}" />
-                                    <GridViewColumn Header="Tack" Width="40" DisplayMemberBinding="{Binding Ratings.Tackle_Rating}" />
-                                    <GridViewColumn Header="Leg S" Width="40" DisplayMemberBinding="{Binding Ratings.Leg_Strength}" />
-                                    <GridViewColumn Header="Leg A" Width="40" DisplayMemberBinding="{Binding Ratings.Kicking_Accuracy}" />
+                                    <GridViewColumn Header="Acc" Width="30" DisplayMemberBinding="{Binding Accuracy_Rating}" />
+                                    <GridViewColumn Header="Dsc" Width="30" DisplayMemberBinding="{Binding Decision_Making_Rating}" />
+                                    <GridViewColumn Header="Arm" Width="40" DisplayMemberBinding="{Binding Arm_Strength_Rating}" />
+                                    <GridViewColumn Header="PBlk" Width="40" DisplayMemberBinding="{Binding Pass_Block_Rating}" />
+                                    <GridViewColumn Header="RBlk" Width="40" DisplayMemberBinding="{Binding Run_Block_Rating}" />
+                                    <GridViewColumn Header="RPwr" Width="40" DisplayMemberBinding="{Binding Running_Power_Rating}" />
+                                    <GridViewColumn Header="Spd" Width="40" DisplayMemberBinding="{Binding Speed_Rating}" />
+                                    <GridViewColumn Header="Agil" Width="40" DisplayMemberBinding="{Binding Agilty_Rating}" />
+                                    <GridViewColumn Header="Hnd" Width="40" DisplayMemberBinding="{Binding Hands_Rating}" />
+                                    <GridViewColumn Header="Patt" Width="40" DisplayMemberBinding="{Binding Pass_Attack_Rating}" />
+                                    <GridViewColumn Header="RAtt" Width="40" DisplayMemberBinding="{Binding Run_Attack_Rating}" />
+                                    <GridViewColumn Header="Tack" Width="40" DisplayMemberBinding="{Binding Tackle_Rating}" />
+                                    <GridViewColumn Header="Leg S" Width="40" DisplayMemberBinding="{Binding Kicker_Leg_Power_Rating}" />
+                                    <GridViewColumn Header="Leg A" Width="40" DisplayMemberBinding="{Binding Kicker_Leg_Accuracy_Rating}" />
                                 </GridView>
                             </ListView.View>
                         </ListView>
